--- a/source/contact_employees.html.erb
+++ b/source/contact_employees.html.erb
@@ -6,7 +6,7 @@ title: Assaporami - Contatti per dipendenti
 
   <div class="container padding-top-bottom">
     <div class="content-presentation-title">
-      <h3 class="text-center">Desideri avere di pranzi freschi, buoni e sani? </h3>
+      <h3 class="text-center">Desideri avere pranzi freschi, buoni e sani? </h3>
     </div>
     <div class="content-presentation-subtitle">
       <h6>Saremmo molto lieti di cucinare per te ! Ma prima, cerchiamo di convincere il responsabile della tua azienda.</h6>
@@ -19,7 +19,7 @@ title: Assaporami - Contatti per dipendenti
     </div>
 
     <div class="content-presentation-text mb-5">
-      <p class="font-weight-light"><strong>1 - </strong>Compila il modulo qui sotto per dirci dove lavori. <strong>2 - </strong>Entreremo in contatto con la tua azienda. <strong>3 - </strong>Per ringraziarti ti manderemo un piccolo omaggio quando inizierà il servizio. Non esitare a dire ai tuoi colleghi di fare lo stesso, più richieste avremmo, e più ci sarà facile convincere il tuo responsabile !</p>
+      <p class="font-weight-light"><strong>1 - </strong>Compila il modulo qui sotto per dirci dove lavori. <strong>2 - </strong>Entreremo in contatto con la tua azienda. <strong>3 - </strong>Per ringraziarti ti manderemo un piccolo omaggio quando inizierà il servizio. Non esitare a dire ai tuoi colleghi di fare lo stesso, più richieste avremo, e più ci sarà facile convincere il tuo responsabile !</p>
     </div>
 
     <div class="row d-flex justify-content-center">
