--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -150,11 +150,11 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <hr align="center" width="10%" class="colored-border">
 
       <div class="content-presentation-text-title">
-        <p><strong>Ogni giorno, i nostri Chef preparano dei piatti saporiti, sani, ed equilibrati, consegnati nei vostri uffici affinchè i vostri collaboratori si deliziano. Con Assaporami non ci sono più scuse per godersi la pausa pranzo.</strong></p>
+        <p><strong>Ogni giorno, i nostri Chef preparano dei piatti saporiti, sani, ed equilibrati, consegnati nei vostri uffici affinchè i vostri collaboratori si delizino. Con Assaporami non ci sono più scuse per non godersi la pausa pranzo.</strong></p>
       </div>
 
       <div class="content-presentation-text">
-        <p class="font-weight-light mb-4">Abbiamo pensato a tutto ma soppratutto abbiamo pensato a Voi, ai vostri collaboratori. Abbiamo pensato che tutti dovrebbero potere avere accesso a dei piatti freschi, buoni e sani. Abbiamo quindi pensato a scegliere i migliori fornitori per avere un materia prima di qualità, e poi di elaborare dei menu vareggiati ed equilibrati ogni settimana. E abbiamo deciso di preparali e di confezionarli in porzione individuale con packaging compostabile in modo che possano essere etichettati riportando tutte le loro caratteristiche: ingredienti, allergeni e valori nutrizionali...Ma sopratutto che possano essere assaporati per rendere la giornata di lavoro più bella e proficua!
+        <p class="font-weight-light mb-4">Abbiamo pensato a tutto ma soppratutto abbiamo pensato a Voi, ai vostri collaboratori. Abbiamo pensato che tutti dovrebbero potere avere accesso a dei piatti freschi, buoni e sani. Abbiamo quindi pensato a scegliere i migliori fornitori per avere un materia prima di qualità, e poi a elaborare dei menu vareggiati ed equilibrati ogni settimana. E abbiamo deciso di preparali e di confezionarli in porzione individuale con packaging compostabile in modo che possano essere etichettati riportando tutte le loro caratteristiche: ingredienti, allergeni e valori nutrizionali...Ma sopratutto che possano essere assaporati per rendere la giornata di lavoro più bella e proficua!
         </p>
       </div>
       <div>
@@ -207,7 +207,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <h4 class="text-center text-reason">Aumentate il livello di energia pomeridiana.</h4>
           </div>
           <div class="card-reason-back">
-            <p>Un pranzo troppo pesante ha effetti negativi sulla produttivita del team. I nostri piatti forniscono i nutrimenti necessari per aumentare concentrazione e resistenza fisica per il resto della giornata.</p>
+            <p>Un pranzo troppo pesante ha effetti negativi sulla produttività del team. I nostri piatti forniscono i nutrimenti necessari per aumentare concentrazione e resistenza fisica per il resto della giornata.</p>
           </div>
         </div>
       </div>
@@ -231,7 +231,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <h4 class="text-center text-reason">Trattenete e reclutate piu facilmente i migliori talenti.</h4>
           </div>
           <div class="card-reason-back">
-            <p>I migliori collaboratori sono attrati dai migliori posti di lavoro. Offrendo piatti freschi, buoni e sani ai vostri dipendenti, manderete un messaggio chiaro sul tipo di investimenti che fate nelle personne nella vostra azienda.</p>
+            <p>I migliori collaboratori sono attrati dai migliori posti di lavoro. Offrendo piatti freschi, buoni e sani ai vostri dipendenti, manderete un messaggio chiaro sul tipo di investimenti che fate nelle persone nella vostra azienda.</p>
           </div>
         </div>
       </div>
@@ -243,7 +243,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <h4 class="text-center text-reason">Contribuite a creare le relazioni sociali in azienda.</h4>
           </div>
           <div class="card-reason-back">
-            <p>Avere degli amici in azienda, ci rende piu felice e piu propenso a rimanere. E piu facile interagire e conoscere i propri collaboratori quando il cibo vien consegnato.</p>
+            <p>Avere degli amici in azienda, ci rende piu felice e più propenso a rimanere. E più facile interagire e conoscere i propri collaboratori quando il cibo viene consegnato.</p>
           </div>
         </div>
       </div>
@@ -288,10 +288,10 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="card-reason-inner">
           <div class="card-reason-front">
             <i class="fas fa-rainbow icon-reason"></i>
-            <h4 class="text-center text-reason">Un esperienza culinare autentica.</h4>
+            <h4 class="text-center text-reason">Un'esperienza culinaria autentica.</h4>
           </div>
           <div class="card-reason-back">
-            <p>Offriamo un'ampia gamma di piatti per rispondere a tutti i gusti e stile di vita: super proteici, vegetariani, vegani, senza glutine..e cerchiamo di farti scoprire sapori del mondo senza dimenticare i piatti piu locali.</p>
+            <p>Offriamo un'ampia gamma di piatti per rispondere a tutti i gusti e stile di vita: super proteici, vegetariani, vegani, senza glutine..e cerchiamo di farti scoprire sapori del mondo senza dimenticare i piatti più locali.</p>
           </div>
         </div>
       </div>
@@ -315,7 +315,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <h4 class="text-center text-reason">Mangia quando vuoi, dove vuoi.</h4>
           </div>
           <div class="card-reason-back">
-            <p>Il tuo piatto è protetto in una scatola compostibile sigilata ed è sempre pronto ad essere degustato.Lo puoi prendere quando vuoi e portalo dove preferisci: Sala pranzo, scrivania, sala riunione..o anche al parco! Decidi tu !</p>
+            <p>Il tuo piatto è protetto in una scatola compostibile sigilata ed è sempre pronto ad essere degustato. Lo puoi prendere quando vuoi e portalo dove preferisci: Sala pranzo, scrivania, sala riunione..o anche al parco! Decidi tu !</p>
           </div>
         </div>
       </div>
@@ -327,7 +327,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <h4 class="text-center text-reason">Prezzi dolci per dipendenti in salute.</h4>
           </div>
           <div class="card-reason-back">
-            <p>Proponiano prezzi scontati per le aziende con l'intento di rendere il cibo sano accessibile a tutti. Assieme alla tua azienda studiamo la migliore soluzione perche possa contribuire fino all 100% del costo del tuo pasto!</p>
+            <p>Proponiano prezzi scontati per le aziende con l'intento di rendere il cibo sano accessibile a tutti. Assieme alla tua azienda studiamo la migliore soluzione perchè possa contribuire fino all 100% del costo del tuo pasto!</p>
           </div>
         </div>
       </div>
@@ -368,7 +368,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <div class="col-12 col-md-6 col-lg-6 p-3">
         <h3 class="mb-3">Dei piatti per tutti i stili di vita</h3>
         <div>
-          <p class="mb-0">In Assaporami, siamo molto attenti al benessere. Per questo motivo proponiamo dei piatti freschi, buoni e sani. Siamo anche molto attenti al rispetto delle persone, alle loro convinzioni e ai loro modo di alimentarsi. I nostri chef propongono un ampia gamma di piatti equilibrati: Piatti per sportivi, vegani, vegetariani, piatti senza glutine, o senza maiale. Le etichette, e le informazioni sul nostro sito, vi permettono di sapere quali ingredienti sono stati usati per la loro preparazione, se ci sono degli allergeni particolari, quanti calorie comporta un piatto o ancora che tipo di nutrimenti contengono. Pensiamo a voi. A tutti voi.</p>
+          <p class="mb-0">In Assaporami, siamo molto attenti al benessere. Per questo motivo proponiamo dei piatti freschi, buoni e sani. Siamo anche molto attenti al rispetto delle persone, alle loro convinzioni e ai loro modo di alimentarsi. I nostri chef propongono un ampia gamma di piatti equilibrati: Piatti per sportivi, vegani, vegetariani, piatti senza glutine, o senza maiale. Le etichette, e le informazioni sul nostro sito, vi permettono di sapere quali ingredienti sono stati usati per la preparazione, se ci sono degli allergeni particolari, quanti calorie comporta un piatto o ancora che tipo di nutrimenti contengono. Pensiamo a voi. A tutti voi.</p>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-6">
