--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -13,7 +13,7 @@ title: Assaporami Business - About
               <h3 class="h3-responsive">Assaporami - Servizi di ristorazione innovativi per aziende</h3>
             </div>
             <div id="about-text">
-              <p class="p-responsive">Assaporami si avvale di un team di Chef e nutrizionisti per selezionare i migliori ingredienti e comporre i piatti freschi, buoni e sani della vostra pausa pranzo ideale.
+              <p class="p-responsive">Assaporami si avvale di un team di Chef e nutrizionisti per selezionare i migliori ingredienti e cucinare i piatti freschi, buoni e sani della vostra pausa pranzo ideale.
               </p>
             </div>
           </div>
@@ -49,10 +49,10 @@ title: Assaporami Business - About
                   Marco Almerigogna, Co-founder & COO, Laurea Università Bocconi, MBA Insead. Marco è stato membro del board di numerose società prima di creare RT, società di consulenza nel food & beverage.
                   </p>
                   <p>
-                  Giaccomo Treccani, Co-founder & Chef Director, ALMA & AIBES. Giaccomo ha ideato e creato vari formatti di successo nel settore delle ristorazione italiana, portando prodotti di qualità alla portata dei piu numerosi.
+                  Giaccomo Treccani, Co-founder & Chef Director, ALMA & AIBES. Giaccomo ha ideato e creato vari formati di successo nel settore delle ristorazione italiana, portando prodotti di qualità alla portata dei più numerosi.
                   </p>
                   <p>
-                  E tanti altri super bravi che non svegliamo !
+                  E tanti altri super collaboratori bravi che abbiamo deciso di non nominare !
                   </p>
                 </div>
               </div>
@@ -81,7 +81,7 @@ title: Assaporami Business - About
                   </p>
 
                   <p>
-                    Avvalendosi di esperti culinari e di nutrizione, Assaporami crea ogni giono dei piatti freschi, buoni e sani per i dipendenti esigenti.
+                    Avvalendosi di esperti culinari e di nutrizione, Assaporami crea e cunica ogni giono dei piatti freschi, buoni e sani per dipendenti esigenti.
                   </p>
                 </div>
             </div>
