--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -49,10 +49,10 @@ title: Assaporami Business - About
                   Marco, COO, Laurea Università Bocconi, MBA Insead. Marco è stato membro del board di numerose società prima di creare RT, società di consulenza nel food & beverage.
                   </p>
                   <p>
-                  Giaccomo, Chef Director, ALMA & AIBES. Giaccomo ha ideato e creato vari formati di successo nel settore delle ristorazione italiana, portando prodotti di qualità alla portata dei più numerosi.
+                  Giacomo, Chef Director, ALMA & AIBES. Giaccomo ha ideato e creato vari formati di successo nel settore delle ristorazione italiana, portando prodotti di qualità alla portata dei più numerosi.
                   </p>
                   <p>
-                  E tanti altri super collaboratori bravi che abbiamo deciso di non nominare !
+                  E tanti altri super collaboratori. Nominarli tutti sarebbe troppo lungo!
                   </p>
                 </div>
               </div>
@@ -81,7 +81,7 @@ title: Assaporami Business - About
                   </p>
 
                   <p>
-                    Avvalendosi di esperti culinari e di nutrizione, Assaporami crea e cunica ogni giono dei piatti freschi, buoni e sani per dipendenti esigenti.
+                    Avvalendosi di esperti culinari e di nutrizione, Assaporami crea e cucina ogni giono dei piatti freschi, buoni e sani per dipendenti esigenti.
                   </p>
                 </div>
             </div>
